# torchopt

./: .clang-format  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  conda-recipe-minimal-cpu.yaml  conda-recipe-minimal.yaml  conda-recipe.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  questions.yml  questions_help_support.md
.github/workflows/: build.yml  lint.yml  release-test.yml  release.yml  set_cibw_build.py  set_release.py  test.yml  tests.yml
OpTorch/: __init__.py
OpTorch/_src/: MetaOptimizer.py  Optimizer.py  alias.py  base.py  clip.py  combine.py  hook.py  pytypes.py  transform.py  update.py  utils.py  visual.py
OpTorch/_src/custom_op/: __init__.py
TorchOpt/: __init__.py
TorchOpt/_lib/: adam_op.py
TorchOpt/_src/: MetaOptimizer.py  Optimizer.py  __init__.py  alias.py  base.py  clip.py  combine.py  hook.py  implicit_diff.py  linalg.py  linear_solver.py  pytypes.py  schedule.py  transform.py  update.py  utils.py  visual.py
TorchOpt/_src/accelerated_op/: __init__.py
docker/: dev.dockerfile  release.Dockerfile  release.dockerfile  test.dockerfile
docs/: Makefile  conda-recipe.yaml  conf.py  env.yml  index.rst  refs.bib  requirements.txt  spelling_wordlist.txt
docs/_static/js/: copybutton.js
docs/api/: api.rst
docs/developer/: contributing.rst  contributor.rst
docs/examples/: MAML.rst  MAML_old.rst
docs/source/: bibtex.json  conf.py  index.rst  refs.bib  spelling_wordlist.txt
docs/source/api/: api.rst
docs/source/basics/: basics.rst
docs/source/developer/: contributing.rst  contributor.rst
docs/source/distributed/: distributed.rst
docs/source/examples/: MAML.rst
docs/source/explicit_diff/: explicit_diff.rst
docs/source/implicit_diff/: implicit_diff.py  (+1 more)
docs/torchopt101/: torchopt-101.rst
examples/: requirements.txt  simple_Adam.py  simple_Adam_high_grad.py  visualize.py
examples/FuncTorch/: maml_omniglot_vmap.py  parallel_train_torchopt.py
examples/L2R/: README.md  l2r.py  train_l2r.py
examples/LOLA/: README.md  lola_dice.py  visualise.py  visualize.py
examples/MAML-RL/: README.md  func_maml.py  maml.py  maml_torchrl.py  plot.py  run.sh  run_MAML.py  run_MAML_torchrl.py  run_torchrl.sh  test_post_reward_1.npy  test_post_reward_2.npy  test_post_reward_3.npy  test_post_reward_4.npy  test_post_reward_5.npy  test_pre_reward_1.npy  test_pre_reward_2.npy  test_pre_reward_3.npy  test_pre_reward_4.npy  test_pre_reward_5.npy  torchrl_script.py  train_post_reward_1.npy  train_post_reward_2.npy  train_post_reward_3.npy  train_post_reward_4.npy  train_post_reward_5.npy  train_pre_reward_1.npy  train_pre_reward_2.npy  train_pre_reward_3.npy  train_pre_reward_4.npy  train_pre_reward_5.npy
examples/MGRL/: README.md  mgrl.py  toy.py
examples/adam_op/: main.py
examples/few-shot/: README.md  maml-omniglot.py  maml_omniglot.py
examples/functorch/: maml_omniglot_vmap.py  parallel_train.py  parallel_train_torchopt.py
examples/iMAML/: README.md  imaml_omniglot.py  imaml_omniglot_functional.py
include/: common.h  utils.h
include/adam_op/: adam_op.h  adam_op_impl.cuh  adam_op_impl.h  adam_op_impl_cpu.h  adam_op_impl_cuda.cuh
src/: CMakeLists.txt  extension.cpp  module.cpp
src/adam_op/: CMakeLists.txt  adam_op.cpp  adam_op_impl.cpp  adam_op_impl.cu  adam_op_impl_cpu.cpp  adam_op_impl_cuda.cu
tests/: .coverage  .coveragerc  conftest.py  helper_il.py  helpers.py  requirements.txt  test_accelerated_op.py  test_alias.py  test_clip.py  test_combine.py  test_hook.py  test_implicit.py  test_import.py  test_linalg.py  test_meta_optim.py  test_nn.py  test_optim.py  test_optimizer.py  test_pytree.py  test_schedule.py  test_transform.py  test_utils.py  test_zero_order.py
tests/high_level/: test_high_level_inplace.py
tests/implicit/: test_implicit.py
tests/low_level/: test_low_level.py  test_low_level_inplace.py
tests/unit/: test_align.py  test_clip.py  test_schedule.py
torchopt/: __init__.py  alias.py  base.py  clip.py  combine.py  hook.py  implicit_diff.py  linalg.py  linear_solve.py  pytree.py  schedule.py  transform.py  typing.py  update.py  utils.py  version.py  visual.py  zero_grad_diff.py  zero_order_diff.py
torchopt/_C/: adam_op.pyi
torchopt/_lib/: __init__.py  adam_op.py  adam_op.pyi
torchopt/_src/: MetaOptimizer.py  Optimizer.py  __init__.py  alias.py  base.py  clip.py  combine.py  hook.py  implicit_diff.py  linalg.py  linear_solve.py  schedule.py  transform.py  typing.py  update.py  utils.py  visual.py
torchopt/accelerated_op/: __init__.py  adam_op.py
torchopt/alias/: __init__.py  adadelta.py  adagrad.py  adam.py  adamax.py  adamw.py  adan.py  radam.py  rmsprop.py  sgd.py  utils.py
torchopt/diff/: __init__.py  zero_order.py
torchopt/distributed/: __init__.py  api.py  autograd.py  world.py
torchopt/implicit/: __init__.py
torchopt/linalg/: __init__.py  cg.py  ns.py  utils.py
torchopt/linear_solve/: __init__.py  cg.py  inv.py  normal_cg.py  utils.py
torchopt/nn/: __init__.py  module.py  stateless.py
torchopt/optim/: __init__.py  adadelta.py  adagrad.py  adam.py  adamax.py  adamw.py  adan.py  base.py  radam.py  rmsprop.py  sgd.py
torchopt/schedule/: __init__.py  exponential_decay.py  polynomial.py
torchopt/transform/: __init__.py  add_decayed_weights.py  nan_to_num.py  scale.py  scale_by_adadelta.py  scale_by_adam.py  scale_by_adamax.py  scale_by_adan.py  scale_by_radam.py  scale_by_rms.py  scale_by_rss.py  scale_by_schedule.py  scale_by_stddev.py  trace.py  utils.py
tutorials/: 1_Functional_Optimizer.ipynb  2_Visualization.ipynb  3_Meta_Optimizer.ipynb  4_Stop_Gradient.ipynb  5_Implicit_Differentiation.ipynb  6_Zero_Order_Differentiation.ipynb  6_Zero_order_differentiation.ipynb  requirements.txt
(+81 files in other folders)
